<resources>
    <string name="app_name">FFF Daily Diamond</string>
    <string name="txt_splash_ad">This action can contains ads</string>
    <string name="txt_splash_">Sparkle Your Way Through The Diamond World With Our Guide App</string>
    <string name="txt_choose_language">Choose Your Language</string>
    <string name="txt_next">Next</string>
    <string name="txt_intro_1">FFF Tips is your ultimate companion for maximizing your diamond earnings in Free Fire</string>
    <string name="txt_intro_2">Covers every aspect of diamond acquisition in Free Fire</string>
    <string name="txt_intro_3">Our app ensures you never miss out on opportunities to boost your diamond collection</string>
    <string name="txt_start">Start</string>
    <string name="txt_main_title">Daily Diamond</string>
    <string name="txt_general">General</string>
    <string name="txt_characters">Characters</string>
    <string name="txt_pets">Pets</string>
    <string name="txt_bundles">Bundles</string>
    <string name="txt_more_function">More Function</string>
    <string name="txt_weapon">Weapons</string>
    <string name="txt_vehicles">Vehicles</string>
    <string name="txt_emotes">Emotes</string>
    <string name="txt_parachutes">Parachutes</string>
    <string name="txt_choose_the_correct_landing_point">Choose The Correct Landing Point</string>
    <string name="use_the_vehicle_carefully">Use The Vehicle Carefully</string>
    <string name="participate_in_game_event">Participate In Game Event</string>
    <string name="daily_login_rewards">Daily Login Rewards</string>
    <string name="complete_mission">Complete Mission</string>
    <string name="explore_mileteary_sites">Explore Mileteary Sites</string>
    <string name="complate_in_game_archivements">Complete In Game Achievements</string>
    <string name="diamond_calculator">Diamond Calculator</string>
    <string name="advance_calculator">ADVANCE CALCULATOR</string>
    <string name="normal_calculator">NORMAL CALCULATOR</string>
    <string name="basic_diamonds">BASIC DIAMONDS</string>
    <string name="your_game_id_nickname">Your Game ID Nickname</string>
    <string name="skip">Skip</string>
    <string name="claim">CLAIM</string>
    <string name="enter_your_id_here">Enter Your ID Here</string>
    <string name="no_preference">No - Preference</string>
    <string name="br_ranked">BR - Ranked</string>
    <string name="cs_ranked">CS - Ranked</string>
    <string name="casual_modes">Casual Modes</string>
    <string name="select_your_id_level">Select Your ID Level</string>
    <string name="select_your_rank">Select Your Rank</string>
    <string name="characters_claim">Characters Claim</string>
    <string name="apply_now">APPLY NOW</string>
    <string name="share">Share App</string>
    <string name="privacy_policy">Privacy Policy</string>
    <string name="line_1" translatable="false">This page is used to inform visitors regarding my policies with the collection, use, and disclosure of  Personal Information if anyone decided to use my Service.</string>
    <string name="line_2" translatable="false">If you choose to use my Service, then you agree to the collection and use of information in relation to this policy. The Personal Information that I collect is used for providing and improving the Service. I will not use or share your information with anyone except as described in this Privacy Policy. \nThe terms used in this Privacy Policy have the same meanings as in our Terms and Conditions, which is accessible at Spider Stick Man unless otherwise defined in this Privacy Policy.</string>
    <string name="information_collection_and_use" translatable="false">Information Collection and Use</string>
    <string name="information_collection_and_use_description" translatable="false">For a better experience, while using our Service, I may require you to provide us with certain personally identifiable information. The information that I request will be retained on your device and is not collected by me in any way.\nThe app does use third party services that may collect information used to identify you. \nLink to privacy policy of third party service providers used by the app \n\nGoogle Play Services \n\nAdMob \n\nFirebase Analytics \n\nFacebook</string>
    <string name="log_data" translatable="false">Log Data</string>
    <string name="log_data_description" translatable="false">I want to inform you that whenever you use my Service, in a case of an error in the app I collect data and information (through third party products) on your phone called Log Data. This Log Data may include information such as your device Internet Protocol (“IP”) address, device name, operating system version, the configuration of the app when utilizing my Service, the time and date of your use of the Service, and other statistics.</string>
    <string name="cookies" translatable="false">Cookies</string>
    <string name="cookies_description" translatable="false">Cookies are files with a small amount of data that are commonly used as anonymous unique identifiers. These are sent to your browser from the websites that you visit and are stored on your device\'s internal memory. \n\nThis Service does not use these “cookies” explicitly. However, the app may use third party code and libraries that use “cookies” to collect information and improve their services. You have the option to either accept or refuse these cookies and know when a cookie is being sent to your device. If you choose to refuse our cookies, you may not be able to use some portions of this Service.</string>
    <string name="service_providers" translatable="false">Service Providers</string>
    <string name="service_providers_description" translatable="false">I may employ third-party companies and individuals due to the following reasons: \nTo facilitate our Service; \nTo provide the Service on our behalf; \nTo perform Service-related services; or \nTo assist us in analyzing how our Service is used. \nI want to inform users of this Service that these third parties have access to your Personal Information. The reason is to perform the tasks assigned to them on our behalf. However, they are obligated not to disclose or use the information for any other purpose.</string>
    <string name="security" translatable="false">Security</string>
    <string name="security_description" translatable="false">I value your trust in providing us your Personal Information, thus we are striving to use commercially acceptable means of protecting it. But remember that no method of transmission over the internet, or method of electronic storage is 100% secure and reliable, and I cannot guarantee its absolute security.</string>
    <string name="links_to_other_sites" translatable="false">Links to Other Sites</string>
    <string name="links_to_other_sites_description" translatable="false">This Service may contain links to other sites. If you click on a third-party link, you will be directed to that site. Note that these external sites are not operated by me. Therefore, I strongly advise you to review the Privacy Policy of these websites. I have no control over and assume no responsibility for the content, privacy policies, or practices of any third-party sites or services.</string>
    <string name="children_privacy" translatable="false">Children’s Privacy</string>
    <string name="children_privacy_description" translatable="false">These Services do not address anyone under the age of 13. I do not knowingly collect personally identifiable information from children under 13. In the case I discover that a child under 13 has provided me with personal information, I immediately delete this from our servers. If you are a parent or guardian and you are aware that your child has provided us with personal information, please contact me so that I will be able to do necessary actions.</string>
    <string name="changes_to_this_privacy_policy" translatable="false">Changes to This Privacy Policy</string>
    <string name="changes_to_this_privacy_policy_description" translatable="false">I may update our Privacy Policy from time to time. Thus, you are advised to review this page periodically for any changes. I will notify you of any changes by posting the new Privacy Policy on this page. These changes are effective immediately after they are posted on this page.</string>
    <string name="contact_us" translatable="false">Contact Us</string>
    <string name="contact_us_description" translatable="false">If you have any questions or suggestions about my Privacy Policy, do not hesitate to contact me.</string>
    <string name="accept">Accept</string>
</resources>