<?xml version="1.0" encoding="utf-8"?>
<com.google.android.material.circularreveal.CircularRevealRelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/layout_parent"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".ui.activity.screen.PrivacyScreenActivity">

    <com.google.android.material.circularreveal.CircularRevealRelativeLayout
        android:id="@+id/toolbar"
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize">

        <com.google.android.material.textview.MaterialTextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:layout_centerVertical="true"
            android:text="@string/privacy_policy"
            android:textColor="@color/black"
            android:textSize="@dimen/_16sdp"
            android:textStyle="bold" />

    </com.google.android.material.circularreveal.CircularRevealRelativeLayout>

    <androidx.core.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_above="@+id/button_accept"
        android:layout_below="@id/toolbar">

        <com.google.android.material.circularreveal.CircularRevealLinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:padding="@dimen/_10sdp">

            <com.google.android.material.textview.MaterialTextView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:includeFontPadding="false"
                android:justificationMode="inter_word"
                android:text="@string/line_1"
                android:textColor="@color/black"
                android:textSize="@dimen/_14sdp" />

            <com.google.android.material.textview.MaterialTextView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginTop="@dimen/_5sdp"
                android:includeFontPadding="false"
                android:justificationMode="inter_word"
                android:text="@string/line_2"
                android:textColor="@color/black"
                android:textSize="@dimen/_14sdp" />

            <com.google.android.material.textview.MaterialTextView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginTop="@dimen/_15sdp"
                android:includeFontPadding="false"
                android:justificationMode="inter_word"
                android:text="@string/information_collection_and_use"
                android:textColor="@color/black"
                android:textSize="@dimen/_14sdp"
                android:textStyle="bold" />

            <com.google.android.material.textview.MaterialTextView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginTop="@dimen/_5sdp"
                android:includeFontPadding="false"
                android:justificationMode="inter_word"
                android:text="@string/information_collection_and_use_description"
                android:textColor="@color/black"
                android:textSize="@dimen/_14sdp" />

            <com.google.android.material.textview.MaterialTextView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginTop="@dimen/_15sdp"
                android:includeFontPadding="false"
                android:justificationMode="inter_word"
                android:text="@string/log_data"
                android:textColor="@color/black"
                android:textSize="@dimen/_14sdp"
                android:textStyle="bold" />

            <com.google.android.material.textview.MaterialTextView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginTop="@dimen/_5sdp"
                android:includeFontPadding="false"
                android:justificationMode="inter_word"
                android:text="@string/log_data_description"
                android:textColor="@color/black"
                android:textSize="@dimen/_14sdp" />

            <com.google.android.material.textview.MaterialTextView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginTop="@dimen/_15sdp"
                android:includeFontPadding="false"
                android:justificationMode="inter_word"
                android:text="@string/cookies"
                android:textColor="@color/black"
                android:textSize="@dimen/_14sdp"
                android:textStyle="bold" />

            <com.google.android.material.textview.MaterialTextView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginTop="@dimen/_5sdp"
                android:includeFontPadding="false"
                android:justificationMode="inter_word"
                android:text="@string/cookies_description"
                android:textColor="@color/black"
                android:textSize="@dimen/_14sdp" />

            <com.google.android.material.textview.MaterialTextView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginTop="@dimen/_15sdp"
                android:includeFontPadding="false"
                android:justificationMode="inter_word"
                android:text="@string/service_providers"
                android:textColor="@color/black"
                android:textSize="@dimen/_14sdp"
                android:textStyle="bold" />

            <com.google.android.material.textview.MaterialTextView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginTop="@dimen/_5sdp"
                android:includeFontPadding="false"
                android:justificationMode="inter_word"
                android:text="@string/service_providers_description"
                android:textColor="@color/black"
                android:textSize="@dimen/_14sdp" />

            <com.google.android.material.textview.MaterialTextView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginTop="@dimen/_15sdp"
                android:includeFontPadding="false"
                android:justificationMode="inter_word"
                android:text="@string/security"
                android:textColor="@color/black"
                android:textSize="@dimen/_14sdp"
                android:textStyle="bold" />

            <com.google.android.material.textview.MaterialTextView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginTop="@dimen/_5sdp"
                android:includeFontPadding="false"
                android:justificationMode="inter_word"
                android:text="@string/security_description"
                android:textColor="@color/black"
                android:textSize="@dimen/_14sdp" />

            <com.google.android.material.textview.MaterialTextView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginTop="@dimen/_15sdp"
                android:includeFontPadding="false"
                android:justificationMode="inter_word"
                android:text="@string/links_to_other_sites"
                android:textColor="@color/black"
                android:textSize="@dimen/_14sdp"
                android:textStyle="bold" />

            <com.google.android.material.textview.MaterialTextView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginTop="@dimen/_5sdp"
                android:includeFontPadding="false"
                android:justificationMode="inter_word"
                android:text="@string/links_to_other_sites_description"
                android:textColor="@color/black"
                android:textSize="@dimen/_14sdp" />

            <com.google.android.material.textview.MaterialTextView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginTop="@dimen/_15sdp"
                android:includeFontPadding="false"
                android:justificationMode="inter_word"
                android:text="@string/children_privacy"
                android:textColor="@color/black"
                android:textSize="@dimen/_14sdp"
                android:textStyle="bold" />

            <com.google.android.material.textview.MaterialTextView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginTop="@dimen/_5sdp"
                android:includeFontPadding="false"
                android:justificationMode="inter_word"
                android:text="@string/children_privacy_description"
                android:textColor="@color/black"
                android:textSize="@dimen/_14sdp" />

            <com.google.android.material.textview.MaterialTextView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginTop="@dimen/_15sdp"
                android:includeFontPadding="false"
                android:justificationMode="inter_word"
                android:text="@string/changes_to_this_privacy_policy"
                android:textColor="@color/black"
                android:textSize="@dimen/_14sdp"
                android:textStyle="bold" />

            <com.google.android.material.textview.MaterialTextView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginTop="@dimen/_5sdp"
                android:includeFontPadding="false"
                android:justificationMode="inter_word"
                android:text="@string/changes_to_this_privacy_policy_description"
                android:textColor="@color/black"
                android:textSize="@dimen/_14sdp" />

            <com.google.android.material.textview.MaterialTextView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginTop="@dimen/_15sdp"
                android:includeFontPadding="false"
                android:justificationMode="inter_word"
                android:text="@string/contact_us"
                android:textColor="@color/black"
                android:textSize="@dimen/_14sdp"
                android:textStyle="bold" />

            <com.google.android.material.textview.MaterialTextView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginTop="@dimen/_5sdp"
                android:includeFontPadding="false"
                android:justificationMode="inter_word"
                android:text="@string/contact_us_description"
                android:textColor="@color/black"
                android:textSize="@dimen/_14sdp" />

        </com.google.android.material.circularreveal.CircularRevealLinearLayout>

    </androidx.core.widget.NestedScrollView>

    <com.google.android.material.textview.MaterialTextView
        android:id="@+id/button_accept"
        android:layout_width="match_parent"
        android:layout_height="@dimen/_45sdp"
        android:layout_alignParentBottom="true"
        android:background="@color/colorAccentLight"
        android:gravity="center"
        android:text="@string/accept"
        android:textColor="@color/textColor"
        android:textSize="@dimen/_14sdp" />

</com.google.android.material.circularreveal.CircularRevealRelativeLayout>