<?xml version="1.0" encoding="utf-8"?>
<com.google.android.material.circularreveal.CircularRevealRelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.activity.IDActivity">

    <com.google.android.material.circularreveal.CircularRevealRelativeLayout
        android:id="@+id/toolbar"
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize">
        <com.google.android.material.imageview.ShapeableImageView
            android:id="@+id/btn_back"
            android:layout_width="@dimen/_40sdp"
            android:layout_height="match_parent"
            android:src="@drawable/ic_back"
            app:contentPadding="@dimen/_7sdp"/>
        <com.google.android.material.textview.MaterialTextView
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_toRightOf="@+id/btn_back"
            android:text="@string/your_game_id_nickname"
            android:gravity="center_vertical"
            android:textSize="@dimen/_14sdp"
            android:fontFamily="@font/poppins_semibold"
            android:layout_marginStart="@dimen/_10sdp"
            android:textColor="@color/textColor"/>
    </com.google.android.material.circularreveal.CircularRevealRelativeLayout>

    <com.google.android.material.circularreveal.CircularRevealLinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:layout_below="@+id/toolbar">
        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/et_id"
            android:layout_width="match_parent"
            android:layout_height="@dimen/_40sdp"
            android:layout_marginHorizontal="@dimen/_20sdp"
            android:background="@drawable/bg_edit_text"
            android:hint="@string/enter_your_id_here"
            android:textAlignment="center"
            android:textColor="@color/black"
            android:inputType="text"
            android:textColorHint="@color/black" />
        <com.google.android.material.circularreveal.CircularRevealRelativeLayout
            android:id="@+id/btn_claim"
            android:layout_width="match_parent"
            android:layout_height="@dimen/_40sdp"
            android:layout_marginVertical="@dimen/_10sdp">
            <com.google.android.material.imageview.ShapeableImageView
                android:layout_width="match_parent"
                android:layout_height="@dimen/_40sdp"
                android:src="@drawable/img_main"/>
            <com.google.android.material.textview.MaterialTextView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:text="@string/claim"
                android:textSize="@dimen/_13sdp"
                android:gravity="center"
                android:textColor="@color/textColor"
                android:fontFamily="@font/poppins_semibold"/>
        </com.google.android.material.circularreveal.CircularRevealRelativeLayout>
        <com.google.android.material.textview.MaterialTextView
            android:id="@+id/btn_skip"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="@dimen/_20sdp"
            android:gravity="center_horizontal|center_vertical"
            android:text="@string/skip"
            android:textSize="@dimen/_15sdp"
            android:textColor="@color/black"/>
    </com.google.android.material.circularreveal.CircularRevealLinearLayout>
</com.google.android.material.circularreveal.CircularRevealRelativeLayout>